WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262856
[UnifiedPDF] Fix layer hierarchy for plugins that are hosted via GraphicsLayers
https://bugs.webkit.org/show_bug.cgi?id=262856
Summary
[UnifiedPDF] Fix layer hierarchy for plugins that are hosted via GraphicsLayers
Simon Fraser (smfr)
Reported
2023-10-07 21:01:36 PDT
Fix the layer hosting added in
269029@main
to make plugins more similar to iframes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-07 21:01:50 PDT
<
rdar://problem/116635683
>
Simon Fraser (smfr)
Comment 2
2023-10-07 21:10:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18821
EWS
Comment 3
2023-10-08 18:20:25 PDT
Committed
269063@main
(6f0db138bd4a): <
https://commits.webkit.org/269063@main
> Reviewed commits have been landed. Closing PR #18821 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug